--- a/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
@@ -82,7 +82,7 @@
             "columnDefs": [
                 {
                     "targets": [5],
-                    "visible": false
+                    "visible": true
                 }
             ]
         } );
