--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -392,7 +392,7 @@
                 //var Planed__St_Date = Planed__St_Date;
                 //var Planed__En_Date = Planed__En_Date;
                 //var EST_hours;
-                var Actual_St_hours;
+                //var Actual_St_hours;
                 var Planed__St_Date;
                 var Planed__En_Date;
                 var Actual_St_Date;
@@ -728,7 +728,7 @@
                 }
             }
 
-             var Actual_St_hours = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_St_hours');
+             var Actual_St_hours = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_St_hrs');
                 Actual_St_hours.editable = false;
              var Actual_St_Date = jQuery("#jqGrid").jqGrid('getColProp', 'Actual_St_Date');
                  Actual_St_Date.editable = false;
