--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -135,7 +135,7 @@
     <div id="jqGridPager"></div>
     @*<i class="fa fa-file-pdf-o" id="export"></i>*@
     @*<img src="https://img.icons8.com/officel/80/000000/export-pdf.png" />*@
-    <button class="MyClass123" id="export" style="display:none;"></button>
+    <button class="MyClass123" id="export" style="display:none;" onclick="exportPDF();"></button>
 </div>
 <input type="hidden" id="hdnSessionProject_ID" value="@Session["Project_ID"]" />
 <input type="hidden" id="hdnSessionInstance_ID" value="@Session["Instance_ID"]" />
@@ -547,7 +547,7 @@
 
                 },
                 {
-                    label: 'Est.(hrs)', name: 'EST_hours', width: 55, align: 'right',
+                    label: 'Est.(hrs)', name: 'EST_hrs', width: 55, align: 'right',
                     //maxlength: 4,
                     //formatter: "number",
                     editable: true,
@@ -571,7 +571,7 @@
                     }
                 },
                 {
-                    label: 'Actual (hrs)', name: 'Actual_St_hours', align: 'right',
+                    label: 'Actual (hrs)', name: 'Actual_St_hrs', align: 'right',
                     //formatter: "number",
                     width: 55, editable: true,
                     editoptions: {
@@ -725,7 +725,18 @@
 
             loadComplete: function () {
                 //alert("mm");
-                  $("#jqGrid").jqGrid("setLabel", "rn", "S.No");
+                $("#jqGrid").jqGrid("setLabel", "rn", "S.No");
+
+                 var ids = jQuery("#jqGrid").jqGrid('getDataIDs');
+                for (var i = 0; i < ids.length; i++) {
+                    var EST_hours = $('#jqGrid').jqGrid('getCell', ids[i], 'EST_hrs')
+                    EST_hours = EST_hours.replace(".", ":")
+                    $('#jqGrid').jqGrid('setCell', ids[i], 'EST_hrs', EST_hours);
+
+                    var Actual_St_hours = $('#jqGrid').jqGrid('getCell', ids[i], 'Actual_St_hrs')
+                    Actual_St_hours = Actual_St_hours.replace(".", ":")
+                    $('#jqGrid').jqGrid('setCell', ids[i], 'Actual_St_hrs',Actual_St_hours);
+                }
 
             },
             gridComplete: function () {
@@ -1198,28 +1209,36 @@
     });
 	return Parameters;
     }
-    $("#export").on("click", function () {
-        //debugger;
-        var sessionValueProject_Name = $("#hdnSessionProject_Name").val();
-        var sessionValueInstance_Name = $("#hdnSessionInstance_Name").val();
-        var description = 'Project Name :' + sessionValueProject_Name + ' && Instance Name :' + sessionValueInstance_Name;
-        $("#jqGrid").jqGrid("exportToPdf", {
-            title: 'PDF Export',
-            orientation: 'landscape',
-            pageSize: 'A3',
-            description: description,
-            customSettings: null,
-            download: 'download',
-            includeLabels: true,
-            includeGroupHeader: true,
-            includeFooter: true,
-            fileName: "OverAllReportExport.pdf",
-            onBeforeExport: function (doc) {
-                //doc.content[0].table.headerRows = 2;
-            }
-            //header_logo: "~/Asset/images/ProACCTool.png",
-        })
-    })
+
+    //$("#export").on("click", function () {
+    //    var sessionValueProject_Name = $("#hdnSessionProject_Name").val();
+    //    var sessionValueInstance_Name = $("#hdnSessionInstance_Name").val();
+    //    var description = 'Project Name :' + sessionValueProject_Name + ' && Instance Name :' + sessionValueInstance_Name;
+    //    $("#jqGrid").jqGrid("exportToPdf", {
+    //        title: 'PDF Export',
+    //        orientation: 'landscape',
+    //        pageSize: 'A3',
+    //        description: description,
+    //        customSettings: null,
+    //        download: 'download',
+    //        includeLabels: true,
+    //        includeGroupHeader: true,
+    //        includeFooter: true,
+    //        includeHeader: true,
+    //        fileName: "OverAllReportExport.pdf",
+    //        mimetype: "application/pdf",
+    //        loadIndicator : true,
+    //        treeindent : "-",
+    //        onBeforeExport:null
+    //    })
+    //})
+
+    @*$("#export").on("click", function () {
+         document.location='@Url.Action("pdfData", "ProjectMonitor")?pdf=true'>
+    })*@
+    function exportPDF() {
+      document.location='@Url.Action("pdfData", "Report")?pdf=true'
+    }
 </script>
 
 @*<script type="text/javascript">
