--- a/ProAcc/Views/Resource/ResourcePostConversion.cshtml
+++ b/ProAcc/Views/Resource/ResourcePostConversion.cshtml
@@ -104,7 +104,7 @@
     </div>
 </div>
 @{
-    Html.RenderAction("ResourceAllocation", "Resource");
+    Html.RenderAction("ResourceAllocationAll", "Resource");
 }
 <input type="hidden" id="hdnSessionProject_ID" value="@Session["Project_ID"]" />
 <input type="hidden" id="hdnSessionInstance_ID" value="@Session["Instance_ID"]" />
