--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -24,7 +24,8 @@
 </script>
 <style>
     .ui-jqgrid {
-        font-size: 0.8rem
+        font-size: 0.8rem;
+        width:2000px !important;
     }
 
     th.ui-th-column div {
@@ -141,6 +142,13 @@
 <input type="hidden" id="hdnSessionInstance_ID" value="@Session["Instance_ID"]" />
 
 <script>
+   $(window).on("resize", function () {
+    var $grid = $("#jqGrid"),
+        newWidth = $grid.closest(".ui-jqgrid").parent().width();
+        $grid.jqGrid("setGridWidth", newWidth, true);
+    });
+
+
     $(document).ready(function () {
             $("#IDInstance").prop("disabled", true);
         $('#SubmitInstance').prop("disabled", true);
@@ -293,7 +301,7 @@
         //LoadTable(1);
     });
     $(window).on("resize", function () {
-  var $grid = $("#jqGrid"),
+  var $grid = $("#list"),
     newWidth = $grid.closest(".ui-jqgrid").parent().width();
   $grid.jqGrid("setGridWidth", newWidth, true);
 });
