--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -224,7 +224,7 @@
                     },
                 },
                 {
-                    label: 'Est.(hrs)', name: 'EST_hrs', width: 55,
+                    label: 'Est.(hrs) HH:MM', name: 'EST_hrs', width: 55,
                     editable: true, align: 'right', //formatter: 'string',
                     editrules: { },
                     editoptions: {
