--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -80,6 +80,9 @@
     .MyClass123:before {
         content: url("https://img.icons8.com/officel/80/000000/export-pdf.png");
     }
+    .app-main__inner{
+        max-width:99.5%;
+    }
 </style>
 
 <div class="row instanceRow">
