--- a/ProAcc/Views/Report/PMReport.cshtml
+++ b/ProAcc/Views/Report/PMReport.cshtml
@@ -19,7 +19,7 @@
 <ul class="tabs-animated-shadow nav-justified tabs-animated nav">
     <li class="nav-item Hideme" id="Nav_4">
         <a role="tab" class="nav-link" id="tab-c1-4" data-toggle="tab" href="#tab-animated1-4" aria-selected="false">
-            <span class="nav-text">SAP S4HANA Comprehensive Assessment and Readiness Check Report</span>
+            <span class="nav-text">Comprehensive Assessment and Readiness Check Report</span>
         </a>
     </li>
     <li class="nav-item Hideme" id="Nav_0">
@@ -40,7 +40,7 @@
     </li>
     <li class="nav-item Hideme" id="Nav_3">
         <a role="tab" class="nav-link show" id="tab-c1-2" data-toggle="tab" href="#tab-animated1-3" aria-selected="false">
-            <span class="nav-text">Current State & Vision: Roadmap Guide & Migration Scenario</span>
+            <span class="nav-text">License Optimization</span>
         </a>
     </li>
 
