PM Task changes

--- a/ProAcc/Views/Assessment/CreateAnalysis.cshtml
+++ b/ProAcc/Views/Assessment/CreateAnalysis.cshtml
@@ -323,6 +323,7 @@
 
  $("#prt").hide();
         $('#btnUpload').click(function () {
+            debugger
             var RedirectTo = $("#RedirectTo").val();
             var ProjectID = $("#IDProject").val();
             var InstanceId = $("#IDInstance").val();
